c4prj1_deck/grade.txt
Grading at Tue 06 Dec 2022 07:16:15 AM UTC
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:61:30: error: assignment to ‘card_t *’ {aka ‘struct card_tag *’} from incompatible pointer type ‘card_t **’ {aka ‘struct card_tag **’} [-Werror=incompatible-pointer-types]
   61 |   deck->cards[deck->n_cards] = &card;
      |                              ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
